--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
 </head>
 <body>
 	<section>
+		<div class="thum" ><a href=""><img class="headthum" src="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico"></a></div>
 		<div class="header">
 			<div class="h2"><h2 >Find homes in United States on Airbnb</h2></div>
-			<div>Discover entire homes and private rooms perfect for any trip</div>
+			<div class="discover">Discover entire homes and private rooms perfect for any trip</div>
 			<div class="firstform">
 				<form action="">
 					<div><span>WHERE</span></div>
 					<div><input type="text" placeholder="AnyWhere"></div>
 					<div class="checking">
-						<div class=""><span>CHECK IN</span></div>
+						<div class=""><span>CHECK-IN</span></div>
 						<div><input type="date" ></div>
 					</div>	
-					<div class="checking">
+					<div class="checking" style="float: right;">
 						<div><span>CHECK OUT</span></div>
 						<div><input type="date" ></div>
 					</div>					
-					<div class="option">
+					<div>
 						<div class="option adult">
 							<div><span>ADULTS</span></div>
 							<select name="adult" id="">
@@ -58,14 +59,63 @@
 						</div>
 					</div>
 					<div class="searchbtn">
-						<input type="submit" value="search">
+						<input type="submit" value="SEARCH" name="">
 					</div>
 				</form>
 			</div>
 		</div>
 	</section>
+
+	<div class="content">
+		<div class="title1">What guests are saying about homes in United States</div>
+		<div>
+			<div class="title2"><img width="20px;"src="images/star1.png"> United States homes were rated <span>4.8 out of 5 stars</span> with <span> 31,500,000+ reviews</span></div>
+		</div>
+
+		<div class="content1" style="margin-right: 15px;">
+			<a href=""><img class="home" src="https://a0.muscache.com/im/pictures/50616050/43df6979_original.jpg"></a>
+			<div class="vote"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"></div>
+			<div class="commemt">Deb, our host was very welcoming and met us in person. She checked to make sure we were settled and had all expectations clearly stated for food, cleaning, and arrival/departures. She also was of great assistance when we needed ice for a medical issue. We would highly recommend this airbnb site!</div>
+			<div class="info">
+				<div class="avatar"><img width="20px;" src="https://a0.muscache.com/im/pictures/ae3ce523-c5ce-4be0-bf3b-b4aff409a2c4.jpg?aki_policy=large"></div>
+				<div class="location">
+					<div class="name">Megan</div>
+					<div class="nation">United States</div>
+				</div>
+			</div>
+		</div>
+<!-- con2 -->
+		<div class="content1" style="margin-right: 15px;">
+			<a href=""><img class="home" src="https://a0.muscache.com/im/pictures/55305748/58a4aaf0_original.jpg"></a>
+			<div class="vote"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"></div>
+			<div class="commemt">Our stay with Kathy was great! She answered messages promptly and offered us some great recommendations on Sonoma vineyards. Her house was lovely and the sleepy cat greeted us at the door with a purr. Overall, our stay with Kathy was exceptional.</div>
+			<div class="info">
+				<div class="avatar"><img width="20px;" src="https://a0.muscache.com/im/users/20134697/profile_pic/1410230911/original.jpg?aki_policy=large"></div>
+				<div class="location">
+					<div class="name">Huong</div>
+					<div class="nation">United States</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="content1">
+			<a href=""><img class="home" src="https://a0.muscache.com/im/pictures/491561/cf5270cc_original.jpg?aki_policy=large"></a>
+			<div class="vote"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"><img src="images/starVote.png"></div>
+			<div class="commemt">Amanda is such an authentically welcoming person. We were welcomed to delightful lodgings, with a great bed, in a beautiful neighborhood. El Camion had the best mole of my life and I have been many places. The Fat Hen had a breakfast that rocked. But the best food was Amanda's brownies. I don't know if we just lucked out, or if she always does this, but the chocolatey goodness after a day of travels was very well appreciated. We would stay again with Amanda in a heartbeat, which we will, since we plan to cruise again from Seattle.</div>
+			<div class="info">
+				<div class="avatar"><img width="20px;" src="https://a0.muscache.com/im/users/27840838/profile_pic/1424107287/original.jpg?aki_policy=large"></div>
+				<div class="location">
+					<div class="name">Tom</div>
+					<div class="nation">United States</div>
+				</div>
+			</div>
+		</div>
+
+	
+	</div>
 	<footer>
 		<hr>
+		<div><a href=""><img width="17px;" src="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico"></a></div>
 		<div>© Airbnb, Inc.</div>
 	</footer>
 </body>
