--- a/index1.html
+++ b/index1.html
@@ -66,12 +66,78 @@
                     </div>
                 </form>
             </div>
-        </div>
-    </section>
-    <footer>
-        <hr>
-        <div>© Airbnb, Inc.</div>
-    </footer>
-</body>
+        </div> 
 
-</html>
+
+    </section>
+    <div class="content">
+        <div class="title"><b>United States: what other travelers have thought of their accommodation</b>
+        </div>
+        <div class="vote">
+            <img src="https://cdn3.iconfinder.com/data/icons/stars-5/512/gold_star-512.png" height="30px" width="30px" alt="">United States accommodations have<b>4.8 out of 5 stars</b>and over<b>31,500,000 reviews</b>
+        </div>
+        
+        <div class="home1">
+            <div class="i"> <img src="https://a0.muscache.com/im/pictures/60671373/c815fefe_original.jpg?aki_policy=large" alt="" height="250px" width="500px"></div><br>
+            <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+            <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+            <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+            <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+            <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+            <br>
+            <p>Great place! Beautiful location. Beautiful decoration, calm, functional. A pearl!</p>
+            <div class="info">
+                <div class="avatar"><img src="https://a0.muscache.com/im/pictures/bd86c045-5c93-481c-8452-790b050bb958.jpg?aki_policy=large" alt="" width="48px" height="48px">
+                    <div class="people">
+                        <div class="name">Leahla</div>
+                        <div class="add">Việt Nam</div>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+            <div class="home1">
+               <div class="i"> <img src="https://a0.muscache.com/im/pictures/26475540/b4fd1d09_original.jpg?aki_policy=large" alt="" height="250px" width="500px"></div><br>
+               <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+               <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+               <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+               <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+               <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+               <br>
+               <p>Great place! Beautiful location. Beautiful decoration, calm, functional. A pearl!</p>
+               <div class="info">
+                <div class="avatar"><img src="https://a0.muscache.com/im/pictures/bd86c045-5c93-481c-8452-790b050bb958.jpg?aki_policy=large" alt="" width="48px" height="48px">
+                    <div class="people">
+                        <div class="name">Leahla</div>
+                        <div class="add">Việt Nam</div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="home1">
+                <div class="i"> <img src="https://a0.muscache.com/im/pictures/9691ec39-5362-4098-8a80-37efb3c2000c.jpg?aki_policy=large" alt="" height="250px" width="500px"></div><br>
+                <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+                <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+                <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+                <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+                <img src="https://image.flaticon.com/icons/png/512/197/197473.png" height="30px" width="30px" alt="">
+                <br>
+                <p>Great place! Beautiful location. Beautiful decoration, calm, functional. A pearl!</p>
+                <div class="info">
+                    <div class="avatar"><img src="https://a0.muscache.com/im/users/26123846/profile_pic/1421274013/original.jpg?aki_policy=large" alt="" width="48px" height="48px">
+                        <div class="people">
+                            <div class="name">Leahla</div>
+                            <div class="add">Việt Nam</div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+
+            </div>
+            <footer>
+                <hr>
+                <div>© Airbnb, Inc.</div>
+            </footer>
+        </body>
+
+        </html>
