--- a/Homework1.html
+++ b/Homework1.html
@@ -2,59 +2,75 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Locations saisonnières et locations en résidence - Airbnb</title>
+	<title>Vacation Homes & Condo Rentals - Airbnb</title>
+	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
-		<section>
-				<div class="header">
-						<img src="https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg" alt="background-image" width="100%" height="689" >	
-					<div class="h2"><h2 >Trouvez des logements à États-Unis sur Airbnb</h2></div>
-					<div>Découvrez des chambres privées ou des logements entiers, parfaitement adaptés à tout type de voyage.
-							OÙ</div>
-					<div class="firstform">
-						<form action="">
-							<div><input type="text" placeholder="Partout"></div>
-							<div class="checking">
-								<div class=""><span>ARRIVÉE</span></div>
-								<div><input type="date" ></div>
+				<header>
+					<div class="banner"><img src="image.jpg" class="bg-header" alt="Find homes in United States on Airbnb"></div>
+					<div class="logo"></div>
+					<div class="content">
+						    <div class="h2"><h2 tabindex="-1">Find homes in United States on Airbnb</h2></div>
+							<div class="tt44">Discover entire homes and private rooms perfect for any trip.</div>
+							<form id="frm" action="">
+							<div style="margin-top:20px;margin-bottom:20px">
+									<div style="margin-bottom:8px"><span class="lb1">WHERE</span></div>
+									<div><input type="text" id="where" placeholder="Any where"></div>
+							</div>
+						    <div class="checking">
+							<div>
+								<div class="ck1"><span class="lb1">CHECK-IN</span>
+									<div><input type="date" ></div>
+								</div>
+								
 							</div>	
-							<div class="checking">
-								<div><span>DÉPART</span></div>
-								<div><input type="date" ></div>
-							</div>					
+							<div>
+								<div class="ck2"><span class="lb1">CHECKOUT</span>
+									<div><input type="date" ></div>
+								</div>
+								
+							</div>	
+						    </div>				
 							<div class="option">
 								<div class="option adult">
-									<div><span>ADULTES</span></div>
+									<div><span class="lb1">ADULTS</span></div>
 									<select name="adult" id="">
-										<option value="2">1 adulte</option>
-										<option value="2">2 adulte</option>
-										<option value="2">3 adulte</option>
-										<option value="2">4 adulte</option>
-										<option value="2">5 adulte</option>
-										<option value="2">6 adulte</option>
-										<option value="2">7 adulte</option>
-										<option value="2">8 adulte</option>
-										<option value="2">9 adulte</option>
+										<option value="2">1 adult</option>
+										<option value="2">2 adults</option>
+										<option value="2">3 adults</option>
+										<option value="2">4 adults</option>
+										<option value="2">5 adults</option>
+										<option value="2">6 adults</option>
+										<option value="2">7 adults</option>
+										<option value="2">8 adults</option>
+										<option value="2">10 adults</option>
+										<option value="2">11 adults</option>
+										<option value="2">12 adults</option>
+										<option value="2">13 adults</option>
+										<option value="2">14 adults</option>
+										<option value="2">15 adults</option>
+										<option value="2">16 adults</option>
 									</select>
 								</div>
 								<div class="option children">
-									<div><span>ENFANTS</span></div>
+									<div><span class="lb1">CHILDREN</span></div>
 									<select name="children" id="">
-										<option value="">0 enfant</option>
-										<option value="">1 enfant</option>
-										<option value="">2 enfant</option>
-										<option value="">3 enfant</option>
-										<option value="">4 enfant</option>
-										<option value="">5 enfant</option>
+										<option value="">0 children</option>
+										<option value="">1 child</option>
+										<option value="">2 children</option>
+										<option value="">3 children</option>
+										<option value="">4 children</option>
+										<option value="">5 children</option>
 									</select>
 								</div>
 							</div>
 							<div class="searchbtn">
-								<input type="submit" value="Rechercher">
+								<button type="submit" class="submit" aria-busy="false">
+									<span class="span_search">Search</span>
+								</button>
 							</div>
 						</form>
 					</div>
-				</div>
-			</section>
+				</header>
 	<footer class="footer-section">
 		<div class="sub-footer">
 			<span>© Airbnb, Inc.</span>
