--- a/Bootstrap/bs4.html
+++ b/Bootstrap/bs4.html
@@ -22,7 +22,7 @@
     <div class="container mg">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link color" href="#">All</a>
+                <a class="nav-link" href="#">All</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Commercial</a>
