--- a/day3.html
+++ b/day3.html
@@ -3,11 +3,13 @@
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<script src="js/bootstrap.min.js" type="text/javascript" ></script>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/day3.css">
 </head>
 <body>
-	<div class="container">	
+	<!-- <div class="container">	
 		<div class="childp22">
 			<div class="box boxchange" >
 				<img src="image/euro.png" alt="">
@@ -142,6 +144,16 @@
 		<div class="childp23">
 			<p>All application are copyrigt by their respective owners. in most situation 1completed the work whils under the employ of the brand owers. Please click throught on an item for more information.</p>
 		</div>	
+	</div> -->
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 col-sm-12">
+				<p>kgskjgsjlg</p>
+			</div>
+			<div class="col-lg-6 col-sm-12">
+				lg
+			</div>
+		</div>
 	</div>
 </body>
 </html>
