--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link type="text/css" href="css/main.css" media="all" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	
 </head>
 <body>
 	<header>
-		<img src="img/logo.svg" id="logo" />
-		<img id="bgr" src="img/br.jpg"/>
+		<!-- <img src="img/logo.svg" id="logo" /> -->
+		
 		
 		<div class="head">
-				<div class="title"><h2>Find homes in United States on Airbnb</h2>
+			<div class="title"><h2>Find homes in United States on Airbnb</h2>
 			<p>Discover entire homes and private rooms perfect for any trip.</p>
 		</div>
 			<form>
@@ -64,6 +67,7 @@
 			<button>Search</button>
 		</form>
 		</div>
+	
 	</header>
 
 	<section>
@@ -72,7 +76,9 @@
 			<h2>What guests are saying about homes in United States</h2>
 			<img src="img/star.svg"/><span>United States homes were rated <strong>4.8 out of 5 stars</strong> with <strong>31,500,000+ reviews</strong></span>
 		</div>
-		<div class="content">
+		<div class="container">
+			<div class="row">
+		<div class="col-md-4">
 			<div class="thumbnail">
 			<img src="img/1.PNG"/>
 			</div>
@@ -92,7 +98,7 @@
 			</div>
 			</div>
 		</div>
-		<div class="content">
+		<div class="col-md-4">
 				<div class="thumbnail">
 				<img src="img/2.PNG"/>
 				</div>
@@ -111,7 +117,7 @@
 				</div>
 				</div>
 		</div>
-		<div class="content">
+		<div class="col-md-4">
 				<div class="thumbnail">
 				<img src="img/3.PNG"/>
 				</div>
@@ -121,7 +127,7 @@
 					<img src="img/star.svg"/>
 					<img src="img/star.svg"/>
 				</p>
-				<span>Sky's place was really just like the pictures. It was comfortable and easy to find and Sky was always contactable even when he was away on </span>
+				<span>Sky's place was really just like the pictures. It was comfortable and easy to find and Sky was always contactable </span>
 				<div class="info">
 					<img src="https://a0.muscache.com/im/pictures/user/ace74a68-dcd0-40a4-997c-c3df2110c7cd.jpg?aki_policy=large"/>
 					<div class="name">
@@ -130,6 +136,8 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		</div>
 
 	</div>
 		<!-- <div>
